# Video-Verification-Processor

./: .dockerignore  .gitignore  README.md  claude.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml  init.sql
services/analyzer/: Dockerfile  pyproject.toml
services/analyzer/analyzer/: base.py  config.py  handler.py  main.py  parsing.py  prompts.py
services/analyzer/analyzer/runners/: anthropic_runner.py  gemini_runner.py  mock_runner.py  openai_runner.py  port.py  registry.py
services/completion_handler/: Dockerfile  pyproject.toml
services/completion_handler/completion_handler/: config.py  handler.py  main.py
services/downloader/: Dockerfile  pyproject.toml
services/downloader/downloader/: config.py  handler.py  main.py
services/gateway/: Dockerfile  pyproject.toml
services/gateway/gateway/: config.py  handler.py  main.py
services/preprocessor/: Dockerfile  pyproject.toml
services/preprocessor/preprocessor/: config.py  handler.py  main.py  reader.py  sampling.py
services/scorer/: Dockerfile  pyproject.toml
services/scorer/scorer/: config.py  handler.py  main.py  report_writer.py  scoring.py
services/submitter/: Dockerfile  pyproject.toml
services/submitter/submitter/: apify_client.py  config.py  handler.py  main.py  schemas.py
shared/: pyproject.toml
shared/shared/: config.py  db.py  domain.py  errors.py  events.py
tests/: conftest.py
tests/integration/: test_pipeline_e2e.py  test_real_e2e.py
tests/unit/: test_completion_handler.py  test_domain.py  test_download_events.py  test_gateway.py  test_parsing.py  test_policies.py  test_prompts.py  test_sampling.py  test_schemas.py  test_scoring.py  test_submitter.py
