[project]
name = "video-verification-gateway"
version = "1.0.0"
description = "Gateway: receives Apify webhooks, publishes download-ready events"
requires-python = ">=3.11"
dependencies = [
    "video-verification-shared",
    "confluent-kafka>=2.3",
    "psycopg[binary]>=3.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gateway*"]
