[project]
name = "video-verification-submitter"
version = "1.0.0"
description = "Submitter: HTTP API for creating verification jobs, triggers Apify"
requires-python = ">=3.11"
dependencies = [
    "video-verification-shared",
    "psycopg[binary]>=3.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["submitter*"]
